--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://www.dafont.com/kawaii-bubble.font" rel="stylesheet">
+    <link href="https://www.onlinewebfonts.com/download/0be5c6995ec8d7d39979fdc933877a59" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,32 +10,62 @@
 </head>
 <body>
 
+    
+<div id="backgroundScreen1">
+   
 
-<!-- TopBar -->
-<canvas id="myCanvas" width="x" height="100"></canvas>
+</div>
 
-<script>
-var c = document.getElementById("myCanvas");
-var ctx = c.getContext("2d");
-// Create gradient
-var grd = ctx.createLinearGradient(0,0,200,0);
-grd.addColorStop(0,"red");
-grd.addColorStop(1,"white");
-// Fill with gradient
-ctx.fillStyle = grd;
-ctx.fillRect(10,10,150,80);
-</script>
+
+
+
+
+<!-- BackgroundImage -->
+
+
+
+
+<!-- IntervalTimerImage -->
+<div>
+    <a href="timer.html"> <img src="/Images/IntervalTimerSign1.png" alt ="IntervalTimerSign1" width ="312" height ="327" class = "flashing-sign-1"> </a>
+</div>
 
 <!-- Image logo -->
 <div>
-     <img src="/Images/Logo1.png" alt ="BoxingChampionsLogo" width ="1807" height ="524" class="center-image-container"> 
+     <img src="/Images/Logo1.png" alt ="BoxingChampionsLogo" width ="1018" height ="338" class="boxing-logo-container"> 
 </div>
- 
 
-<!-- Link to next page -->
-<div class="center-link-text"> <h1 > <a href="timer.html">CLICK HERE TO START</a> </h1>  
+
+
+<!-- ArcadeModeSign1 -->
+<div>
+    <img src="/Images/ArcadeModeSign1.png" alt ="ArcadeModeSign1" width ="296" height ="349"> 
 </div>
-    
+
+
+<!-- Boxing Characters Design -->
+<div>
+    <img src="/Images/BoxingGlovesDesign1.png" alt ="BoxingChampions" class="boxing-characters-fighting"> 
+</div>
+
+<!-- BoxingManualSign1 -->
+<div>
+    <img src="/Images/BoxingManualSign1.png" alt ="BoxingManualSign1" width ="331" height ="348"> 
+</div>
+
+
+
+
+<!-- Start Button --> 
+<div>   
+    <a href="modeSelect.html" class="startButton">START</a>
+</div> 
+   
+<!-- Copyright Notice --> 
+<p> © 2023 Boxing Champion</p>
+
+
+
 
 </body>
 </html>
