--- a/timer.html
+++ b/timer.html
@@ -8,7 +8,7 @@
     <title>Boxing Champion</title>
 
     <link rel="stylesheet" href="css/main.css">
-    <link href="Fonts/KawaiiBubble-Regular.ttf" rel="stylesheet">
+    <link href="Fonts/LTCBroadway.ttf" rel="stylesheet">
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
   </head>
