--- a/index.html
+++ b/index.html
@@ -37,28 +37,31 @@
 <div id="backgroundScreen1">
 </div>
 
-
+<div class = "row">
 <!-- IntervalTimerImage -->
-<div1>
+<div class="column">
     <a href="timer.html"> <img src="/Images/IntervalTimerSign1.png" alt ="IntervalTimerSign1" width ="312" height ="327" class = "flashing-sign-1"> </a>
-</div1>
+</div>
 
 
 <!-- ArcadeModeSign1 -->
-<div3>
+<div class="column">
     <img src="/Images/ArcadeModeSign1.png" alt ="ArcadeModeSign1" width ="296" height ="349"> 
 </div3>
 
 <!-- BoxingManualSign1 -->
-<div>
+<div class="column"></div>>
     <img src="/Images/BoxingManualSign1.png" alt ="BoxingManualSign1" width ="331" height ="348"> 
 </div>
 
+</div>
 
 <!-- Start Button --> 
-<div>   
+<div class="column">
     <a href="modeSelect.html" justify-content = center  
     align-items = center class="startButton">START</a>
+</div> 
+
 </div> 
    
 
