--- a/index.html
+++ b/index.html
@@ -7,28 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boxing Champion</title>
-
-
-    <style>
-        * {
-          box-sizing: border-box;
-        }
-        
-        .column {
-          float: left;
-          width: 33.33%;
-          padding: 5px;
-        }
-        
-        /* Clearfix (clear floats) */
-        .row::after {
-          content: "";
-          clear: both;
-          display: table;
-        }
-        </style>
-
-
 </head>
 <body>
 
@@ -37,31 +15,28 @@
 <div id="backgroundScreen1">
 </div>
 
-<div class = "row">
+
 <!-- IntervalTimerImage -->
-<div class="column">
+<div1>
     <a href="timer.html"> <img src="/Images/IntervalTimerSign1.png" alt ="IntervalTimerSign1" width ="312" height ="327" class = "flashing-sign-1"> </a>
-</div>
+</div1>
 
 
 <!-- ArcadeModeSign1 -->
-<div class="column">
+<div3>
     <img src="/Images/ArcadeModeSign1.png" alt ="ArcadeModeSign1" width ="296" height ="349"> 
 </div3>
 
 <!-- BoxingManualSign1 -->
-<div class="column"></div>>
+<div>
     <img src="/Images/BoxingManualSign1.png" alt ="BoxingManualSign1" width ="331" height ="348"> 
 </div>
 
-</div>
 
 <!-- Start Button --> 
-<div class="column">
+<div>   
     <a href="modeSelect.html" justify-content = center  
     align-items = center class="startButton">START</a>
-</div> 
-
 </div> 
    
 
