--- a/index.html
+++ b/index.html
@@ -10,36 +10,28 @@
 </head>
 <body>
 
-
 <!-- BackgroundImage -->
-<div id="backgroundScreen1">
-</div>
-
+<div id="backgroundScreen1"></div>
 
 <!-- IntervalTimerImage -->
-<div1>
-    <a href="timer.html"> <img src="/Images/IntervalTimerSign1.png" alt ="IntervalTimerSign1" width ="312" height ="327" class = "flashing-sign-1"> </a>
-</div1>
-
-
-<!-- ArcadeModeSign1 -->
-<div3>
-    <img src="/Images/ArcadeModeSign1.png" alt ="ArcadeModeSign1" width ="296" height ="349"> 
-</div3>
-
-<!-- BoxingManualSign1 -->
-<div>
-    <img src="/Images/BoxingManualSign1.png" alt ="BoxingManualSign1" width ="331" height ="348"> 
+<div class="interval-timer-button">
+    <a href="timer.html"> <img src="/Images/IntervalTimerSign1.png" alt="IntervalTimerSign1" width="312" height="327" class="interval-timer-button"> </a>
 </div>
 
+<!-- ArcadeModeSign1 -->
+<div class="arcade-button">
+    <img src="/Images/ArcadeModeSign1.png" alt="ArcadeModeSign1" width="296" height="349">
+</div>
+
+<!-- BoxingManualSign1 -->
+<div class="boxing-manual-button">
+    <img src="/Images/BoxingManualSign1.png" alt="BoxingManualSign1" width="331" height="348">
+</div>
 
 <!-- Start Button --> 
-<div>   
-    <a href="modeSelect.html" justify-content = center  
-    align-items = center class="startButton">START</a>
-</div> 
-   
-
+<div class="button-container">
+    <a href="modeSelect.html" class="button">START</a>
+</div>
 
 </body>
 </html>
