--- a/modeSelect.html
+++ b/modeSelect.html
@@ -7,44 +7,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boxing Champion</title>
+
 </head>
 <body>
 
-    
-<div id="backgroundScreen2">
-   
-
-</div>
-
-
-
-
 
 <!-- BackgroundImage -->
+<div id="backgroundScreen2">
+</div>
 
 
-
-<!-- Start Button --> 
-<div>   
-    <a href="index.html" class="startButton">BACK</a>
-</div> 
-
+<!-- SectionImagesIntoRow -->
+<div class="image-row">
 
 <!-- Arcade Mode Option Pic -->
-<div>
-    <img src="/Images/ArcadeModeOptionPic.png" alt ="ArcadeMode" width ="494" height ="696" class="modeHover"> 
-</div>
+    <img src="/Images/ArcadeModeOptionPic.png" alt ="ArcadeMode" 
+    width ="494" height ="696"> 
 
 <!-- Timer Mode Option Pic -->
-<div>
-    <a href="timer.html"><img src="/Images/TimerModeOptionPic.png" alt ="IntervalTimer" 
-        width ="494" height ="696" class="modeHover"> </a>
-</div>
+<a href="timer.html"><img src="/Images/TimerModeOptionPic.png" alt ="IntervalTimer" 
+    width ="494" height ="696"> </a>
 
 <!-- Boxing Manual Option Pic -->
-<div>
-    <img src="/Images/BoxingManualOptionPic.png" alt ="BoxingManual" width ="494" height ="696" class="modeHover"> 
+    <img src="/Images/BoxingManualOptionPic.png" alt ="BoxingManual" 
+    width ="494" height ="696"> 
+
 </div>
+
+
+<!-- Back Button --> 
+<div class="button-container-2">  
+    <a href="index.html" class="button">BACK</a>
+</div> 
+
 
 
 
