--- a/modeSelect.html
+++ b/modeSelect.html
@@ -11,6 +11,9 @@
 </head>
 <body>
 
+    <!-- Old Fashioned Overlay --> 
+<div class="overlay">
+</div>
 
 <!-- BackgroundImage -->
 <div id="backgroundScreen2">
