--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <script>
 const overlayImages = [
   "/Images/OldCover.png",
-  "/Images/NewCover.png",
-  "/Images/AlternateCover.png"
+  "/Images/OldCover2.png",
+  "/Images/OldCover3.png"
 ];
 
 let currentOverlayIndex = 0;
@@ -23,12 +23,6 @@ setInterval(() => {
   document.querySelector('.overlay').style.backgroundImage = `url(${currentOverlay})`;
 }, 500);
     </script>
-
-
-
-
-
-
 
 </head>
 <body>
