--- a/timer.html
+++ b/timer.html
@@ -7,7 +7,7 @@
 
     <title>Boxing Champion</title>
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="styles.css">
     <link href="Fonts/LTCBroadway.ttf" rel="stylesheet">
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
@@ -15,9 +15,17 @@
 
   <body>
 
-    <div class="center-link-text"> <h1 > <a href="index.html">CLICK HERE TO GO BACK</a> </h1>  
-    </div>
 
     <div> <script src="js/main.js"></script> </div>
+
+<!-- BackgroundImage -->
+<div id="backgroundScreen3"></div>
+
+
+    <!-- Back Button --> 
+<div class="button-container">
+  <a href="modeSelect.html" class="button">BACK</a>
+</div>
+
   </body>
 </html>
