--- a/arcade.html
+++ b/arcade.html
@@ -33,79 +33,16 @@ document.querySelector('.overlay').style.backgroundImage = `url(${currentOverlay
 </script>
 
 
-<!-- TimerStyle--> 
-<style>
-#timer {
-font-size: 2rem;
-margin: 2rem;
-text-align: center;
-}
-</style>
-
-<!-- TimerScript--> 
-<script>
-let countdownIntervalId;
-let countdownTime = 0;
-let countdownTargetTime = 0;
-
-function startCountdown() {
-const durationInput = document.getElementById("duration");
-countdownTime = parseInt(durationInput.value);
-countdownTargetTime = Date.now() + countdownTime * 1000;
-
-clearInterval(countdownIntervalId);
-countdownIntervalId = setInterval(updateCountdown, 1000);
-}
-
-function stopCountdown() {
-clearInterval(countdownIntervalId);
-}
-
-function resetCountdown() {
-stopCountdown();
-countdownTime = 0;
-updateCountdown();
-}
-
-function updateCountdown() {
-const countdownElement = document.getElementById("countdown");
-const timeLeft = countdownTargetTime - Date.now();
-const secondsLeft = Math.ceil(timeLeft / 1000);
-
-if (secondsLeft <= 0) {
-countdownElement.innerHTML = "Time's up!";
-stopCountdown();
-} else {
-const minutes = Math.floor(secondsLeft / 60);
-const seconds = secondsLeft % 60;
-const formattedTime = `${minutes}:${seconds.toString().padStart(2, "0")}`;
-countdownElement.innerHTML = formattedTime;
-}
-}
-</script>
-</head>
-
-
-</head>
-<body>
-
 <!-- Old Fashioned Overlay --> 
 <div class="overlay">
 </div>
 
+<!-- Link To Arcade Mode --> 
+<div> <script src="js/arcade.js"></script> </div>
 
 
 <!-- BackgroundImage -->
 <div id="backgroundScreen4"></div>
-
-<!-- Timer -->
-<div id="timer">
-<input type="number" id="duration" min="1" max="600" placeholder="Duration (sec)" />
-<button onclick="startCountdown()">Start</button>
-<button onclick="stopCountdown()">Stop</button>
-<button onclick="resetCountdown()">Reset</button>
-<div id="countdown"></div>
-</div>
 
 
 <!-- Back Button --> 
