--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="stylesheet" href="styles.css">
 <link href="https://www.onlinewebfonts.com/download/0be5c6995ec8d7d39979fdc933877a59" rel="stylesheet">
+<link rel="icon" type="image/x-icon" href="/Images/Favicon.png">
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,8 +35,6 @@ document.querySelector('.overlay').style.backgroundImage = `url(${currentOverlay
 </head>
 <body>
 
-
-
 <!-- Old Fashioned Overlay --> 
 <div class="overlay">
 </div>
@@ -56,7 +55,7 @@ width="312" height="327" class="interval-timer-button"> </a>
 
 <!-- BoxingManualSign1 -->
 <div class="boxing-manual-button">
-<img src="/Images/BoxingManualSign1.png" alt="BoxingManualSign1" width="331" height="348">
+<a href="manual.html"><img src="/Images/BoxingManualSign1.png" alt="BoxingManualSign1" width="331" height="348"> </a>
 </div>
 
 <!-- Start Button --> 
