--- a/manualPage5.html
+++ b/manualPage5.html
@@ -9,8 +9,6 @@
 <link rel="stylesheet" href="styles.css">
 <link rel="icon" type="image/x-icon" href="/Images/Favicon.png">
 <link href="Fonts/LTCBroadway.ttf" rel="stylesheet">
-<script src="libraries/p5.min.js"></script>
-<script src="libraries/p5.sound.min.js"></script>
 
 <!-- Old Fashioned Overlay Animation-->     
 <script>
@@ -33,8 +31,26 @@ document.querySelector('.overlay').style.backgroundImage = `url(${currentOverlay
 }, 300); //change time
 </script>
 
+
 </head>
 <body>
+
+<!-- Next Page Button -->
+<div class="next-page-button">
+<a href="manualPage6.html"> <img src="/Images/PageArrow.png" width="51" height="41"> </a>
+</div>
+
+<!-- Back Page Button -->
+<div class="back-page-button">
+<a href="manualPage4.html"> <img src="/Images/BackPageArrow.png" width="51" height="41"> </a>
+</div>
+
+
+
+<!-- Manual Page Image -->
+<div class="manualPage">
+<img src="/Images/Page5.png" alt="Page1" width="1600" height="770"> </a>
+</div>
 
 
 
@@ -42,12 +58,8 @@ document.querySelector('.overlay').style.backgroundImage = `url(${currentOverlay
 <div class="overlay">
 </div>
 
-<!-- Link To Arcade Mode --> 
-<div> <script src="js/arcade.js"></script> </div>
-
-
 <!-- BackgroundImage -->
-<div id="backgroundScreen4"></div>
+<div id="backgroundScreen5"></div>
 
 
 <!-- Back Button --> 
