--- a/modeSelect.html
+++ b/modeSelect.html
@@ -5,6 +5,7 @@
     <link href="https://www.onlinewebfonts.com/download/0be5c6995ec8d7d39979fdc933877a59" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" type="image/x-icon" href="/Images/Favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boxing Champion</title>
 
@@ -54,8 +55,8 @@
     width ="494" height ="696"> </a>
 
 <!-- Boxing Manual Option Pic -->
-    <img src="/Images/BoxingManualOptionPic.png" alt ="BoxingManual" 
-    width ="494" height ="696"> 
+<a href="manual.html"><img src="/Images/BoxingManualOptionPic.png" alt ="BoxingManual" 
+    width ="494" height ="696"> </a>
 
 </div>
 
