--- a/timer.html
+++ b/timer.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="styles.css">
     <link href="Fonts/LTCBroadway.ttf" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/Images/Favicon.png">
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
   </head>
