update late one tonight

--- a/arcade.html
+++ b/arcade.html
@@ -41,18 +41,26 @@ document.querySelector('.overlay').style.backgroundImage = `url(${currentOverlay
 </div>
 
 <div class="image-container">
-<img id="random-image" src="Images/" alt="">
+<img id="random-image" src="Images">
 </div>
 <button id="start-button">Start Game</button>
 
 
-
-
-
-
-
 <!-- BackgroundImage -->
 <div id="backgroundScreen4"></div>
+
+<!-- Timer Character Image -->
+<div class="arcade-character">
+<img src="/Images/ArcadeCharacter.png" alt="ArcadeCharacter" 
+width="634" height="638" class="interval-timer-button"> </a>
+</div>
+    
+<!-- Timer Instructions Image -->
+<div class="timer-instructions">
+<img src="/Images/ArcadeInstructions.png" alt="TimerInstructions" 
+width="789" height="383" class="timer-instructions"> </a>
+</div>
+      
 
 <!-- Back Button --> 
 <div class="button-container">
