--- a/modeSelect.html
+++ b/modeSelect.html
@@ -47,11 +47,11 @@
 <div class="image-row">
 
 <!-- Arcade Mode Option Pic -->
-<a href="arcade.html"><img src="/Images/ArcadeModeOptionPic.png" alt ="ArcadeMode" 
+<a href="arcade.html"><img src="/Images/arcadeMode.png" alt ="ArcadeMode" 
     width ="494" height ="696"></a>
 
 <!-- Timer Mode Option Pic -->
-<a href="timer.html"><img src="/Images/TimerModeOptionPic.png" alt ="IntervalTimer" 
+<a href="timer.html"><img src="/Images/customTimer.png" alt ="IntervalTimer" 
     width ="494" height ="696"> </a>
 
 <!-- Boxing Manual Option Pic -->
