--- a/timer.html
+++ b/timer.html
@@ -101,8 +101,8 @@ width="204" height="76" >
 
 <!--Timer Text-->
 <div class="timerTextDiv">
-<p id="timerText">10</p>
-<p id="wellDoneText" style="display: none;">Well Done!</p>
+<p id="timerText">10</p> </div>
+<div class="timerTextDivWellDone"><p id="wellDoneText" style="display: none;">Well Done!</p>
 </div>
 
 <div> <script src="js/main.js"></script> </div>
